--- a/source/cibo.html.erb
+++ b/source/cibo.html.erb
@@ -10,7 +10,7 @@ title: Assaporami - Cibo
       </p>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-        <%= image_tag "https://res.cloudinary.com/pimpi1/image/upload/v1561108652/sito/Servizi/1.pressoffice_digitalpr____lb0job.jpg", id: "img-services" %>
+        <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573839098/Assaporami/Cibo/vegetables.jpg", id: "img-services" %>
     </div>
   </div>
 </div>
@@ -18,11 +18,11 @@ title: Assaporami - Cibo
 <div class="banner banner-grey">
   <div class="row align-items-center">
     <div class="col-12 col-md-4 kill-padding">
-      <%= image_tag "https://res.cloudinary.com/pimpi1/image/upload/v1561108856/sito/Servizi/2.organizzazioneeventi_qqfcfk.jpg", id: "img-services" %>
+      <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573643728/Assaporami/Index/gallery_piatti.jpg", id: "img-services" %>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
       <h2 class="h2-responsive">La gamma dei piatti</h2>
-      <p>Assaporami presso i vostri uffici. La soluzione è modulabile secondo le vostre esigenze (pranzo e collazione o solo pranzo) e integrata al vostro arredamento. Lo spazio comprende dei moduli refregerati e un banco per il nostro personale. Una soluzione economica, facile da integrare e pulita.</p>
+      <p>In Assaporami, siamo molto attenti al benessere. Per questo motivo proponiamo dei piatti freschi, buoni e sani. Siamo anche molto attenti al rispetto delle persone, alle loro convinzioni e ai loro modo di alimentarsi. I nostri chef propongono un ampia gamma di piatti equilibrati: Piatti per sportivi, vegani, vegetariani, piatti senza glutine, o senza maiale. Le etichette, e le informazioni sul nostro sito, riportano la lista degli ingredienti e degli allergeni. Pensiamo a voi. A tutti voi.</p>
     </div>
   </div>
 </div>
@@ -35,7 +35,7 @@ title: Assaporami - Cibo
       </p>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-        <%= image_tag "https://res.cloudinary.com/pimpi1/image/upload/v1561108884/sito/Servizi/3.supportocommerciale_fgvjxo.jpg", id: "img-services" %>
+        <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573839810/Assaporami/Cibo/trasparenza.jpg", id: "img-services" %>
     </div>
   </div>
 </div>
@@ -43,7 +43,7 @@ title: Assaporami - Cibo
 <div class="banner banner-grey">
   <div class="row align-items-center">
     <div class="col-12 col-md-4 kill-padding">
-      <%= image_tag "https://res.cloudinary.com/pimpi1/image/upload/v1561108911/sito/Servizi/4.scouting_wfy4fv.jpg", id: "img-services" %>
+      <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573840067/Assaporami/Cibo/porzione.jpg", id: "img-services" %>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
       <h2 class="h2-responsive">Porzionato e protetto</h2>
@@ -60,7 +60,7 @@ title: Assaporami - Cibo
       </p>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-        <%= image_tag "https://res.cloudinary.com/pimpi1/image/upload/v1561108938/sito/Servizi/5.consulenzadimmagine_ou1kbf.jpg", id: "img-services" %>
+        <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573839269/Assaporami/Cibo/sostenabilita.jpg", id: "img-services" %>
     </div>
   </div>
 </div>
@@ -68,7 +68,7 @@ title: Assaporami - Cibo
 <div class="banner banner-grey">
   <div class="row align-items-center">
     <div class="col-12 col-md-4 kill-padding">
-      <%= image_tag "https://res.cloudinary.com/pimpi1/image/upload/v1561367311/sito/Carousel/6.showroom_wfyeh5.jpg", id: "img-services" %>
+      <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573839426/Assaporami/Cibo/etica.jpg", id: "img-services" %>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
       <h2 class="h2-responsive">Etica</h2>
