--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -14,19 +14,20 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <li data-target="#carousel-example-2" data-slide-to="3"></li>
         <li data-target="#carousel-example-2" data-slide-to="4"></li>
         <li data-target="#carousel-example-2" data-slide-to="5"></li>
+        <li data-target="#carousel-example-2" data-slide-to="6"></li>
       </ol>
       <!--/.Indicators-->
       <!--Slides-->
       <div class="carousel-inner" role="listbox">
         <div class="carousel-item active">
           <div class="view">
-            <img class="d-block w-100" src="https://res.cloudinary.com/pimpi1/image/upload/c_lfill,h_452,w_1024/v1561042664/sito/Carousel/1.pressoffice_digitalpr____mdclyu.jpg"
+            <img class="d-block w-100" src="https://res.cloudinary.com/orexibus/image/upload/c_fill,h_452,w_1024/v1573843122/Assaporami/Index/foodiesfeed.com_green-salad-with-bread.jpg"
               alt="Olimpia Rospigliosi Agency Press Office & Pr">
             <div class="mask rgba-black-light"></div>
           </div>
           <div class="carousel-caption">
             <h3>Assaporami on-demand</h3>
-            <p>Una tarrifa dolce per i vostri collaboratori. L'azienda può participare alla spesa del pranzo.</p>
+            <p>La consegna del pranzo in azienda con prezzi convenzionati. L'azienda può participare alla spesa.</p>
           </div>
         </div>
         <div class="carousel-item">
@@ -50,15 +51,15 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
             <div class="mask rgba-black-slight"></div>
           </div>
           <div class="carousel-caption">
-            <h3>Fresh wall</h3>
+            <h3>Assaporami fresh wall</h3>
             <p>Soluzione versatile, richiede pochissimo spazio. Aperta per l'ora di pranzo.</p>
           </div>
         </div>
         <div class="carousel-item">
           <!--Mask color-->
           <div class="view">
-            <img class="d-block w-100" src="https://res.cloudinary.com/pimpi1/image/upload/c_lfill,h_452,w_1024/v1561047866/sito/Carousel/4.scouting_2_i1n0ld.jpg"
-              alt="Olimpia Rospigliosi Agency Scouting new talents">
+            <img class="d-block w-100" src="https://res.cloudinary.com/orexibus/image/upload/c_fill,h_452,w_1024/v1573831189/Assaporami/Servizi/exclusive_bowl.jpg"
+              alt="Assaporami Exclusive lunch bag, exclusive bowl">
             <div class="mask rgba-black-slight"></div>
           </div>
           <div class="carousel-caption">
@@ -69,25 +70,37 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="carousel-item">
           <!--Mask color-->
           <div class="view">
-            <img class="d-block w-100" src="https://res.cloudinary.com/pimpi1/image/upload/c_lfill,h_452,w_1024/v1561048805/sito/Carousel/5.consulenzadimmagine_ipfxee.jpg"
-              alt="Olimpia Rospigliosi Agency Consulenza d'Immagine">
+            <img class="d-block w-100" src="https://res.cloudinary.com/orexibus/image/upload/c_fill,h_452,w_1024/v1573830336/Assaporami/Servizi/lunch_meeting.jpg"
+              alt="Assaporami Power staff meeting">
             <div class="mask rgba-black-slight"></div>
           </div>
           <div class="carousel-caption">
             <h3>Power staff meeting</h3>
-            <p>L'abbonamento per le vostre riunioni settimanali: La bonta in riunione. Una soluzione unica pensata per i vostri collaboratori</p>
+            <p>L'abbonamento per le vostre riunioni settimanali: La bonta in riunione.</p>
           </div>
         </div>
         <div class="carousel-item">
           <!--Mask color-->
           <div class="view">
-            <img class="d-block w-100" src="https://res.cloudinary.com/pimpi1/image/upload/c_lfill,h_452,w_1024/v1561367311/sito/Carousel/6.showroom_wfyeh5.jpg"
-              alt="Olimpia Rospigliosi Agency Showroom & Mostre">
+            <img class="d-block w-100" src="https://res.cloudinary.com/orexibus/image/upload/c_fill,e_art:quartz,h_452,w_1024/v1573825558/Assaporami/Servizi/team-building.jpg"
+              alt="Assaporami - Eventi per aziende, team building">
             <div class="mask rgba-black-slight"></div>
           </div>
           <div class="carousel-caption">
             <h3>Assaporami Event</h3>
             <p>Assieme a voi organizziamo eventi privilegiati per i vostri collaboratori: team-building, break-fast meeting, interventi eco-responsabili...</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <!--Mask color-->
+          <div class="view">
+            <img class="d-block w-100" src="https://res.cloudinary.com/orexibus/image/upload/c_fill,co_rgb:ffffff,e_auto_brightness,h_452,o_100,w_1024/v1573826175/Assaporami/Servizi/catering.jpg"
+              alt="Assaporami - Catering su misura">
+            <div class="mask rgba-black-slight"></div>
+          </div>
+          <div class="carousel-caption">
+            <h3>Assaporami Catering</h3>
+            <p>Organizziamo colazioni di benvenuto, coffee break, pranzi, cocktail e cene per i vostri eventi aziendali.</p>
           </div>
         </div>
       <!--/.Slides-->
