--- a/source/services.html.erb
+++ b/source/services.html.erb
@@ -6,11 +6,11 @@ title: Assaporami - Servizi per mangiare meglio in azienda
   <div class="row align-items-center">
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
       <h2 class="h2-responsive">Assaporami on-demand</h2>
-      <p>Il pranzo aziendale consegnato in ufficio. Dei piatti saporiti, sani, freschi e bilanciati. Fate beneficiare i vostri dipendenti di prezzi piu dolci. Prendete a carico una parte del pranzo e ricevete una fattura a fine mese: un'astuta soluzione alternativa ai ticket restaurant. Un dash board completo per gestire il vosto account e monitorare le vostre spese.
+      <p>Il pranzo aziendale consegnato in ufficio. Dei piatti saporiti, sani, freschi e bilanciati. Fate beneficiare i vostri dipendenti di prezzi piu dolci grazie a degli sconti a loro riservati. Prendete a carico una parte del pranzo e ricevete una fattura a fine mese: un'astuta soluzione alternativa ai ticket restaurant. Un dash board completo per gestire il vosto account e monitorare le vostre spese.
       </p>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-        <%= image_tag "https://res.cloudinary.com/pimpi1/image/upload/v1561108652/sito/Servizi/1.pressoffice_digitalpr____lb0job.jpg", id: "img-services" %>
+        <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573842501/Assaporami/Index/ondemand.jpg", id: "img-services" %>
     </div>
   </div>
 </div>
@@ -22,7 +22,7 @@ title: Assaporami - Servizi per mangiare meglio in azienda
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
       <h2 class="h2-responsive">Assaporami Corner</h2>
-      <p>Assaporami presso i vostri uffici. La soluzione è modulabile secondo le vostre esigenze (pranzo e collazione o solo pranzo) e integrata al vostro arredamento. Lo spazio comprende dei moduli refregerati e un banco per il nostro personale. Una soluzione economica, facile da integrare e pulita.</p>
+      <p>Assaporami presso i vostri uffici. La soluzione è modulabile secondo le vostre esigenze (collazione e pranzo o solo pranzo) e integrata al vostro arredamento. Lo spazio comprende dei moduli refregerati e un banco per il nostro personale. I nostri designer sono pronto ad aiutarvi. Una soluzione economica, facile da integrare e pulita.</p>
     </div>
   </div>
 </div>
@@ -30,7 +30,7 @@ title: Assaporami - Servizi per mangiare meglio in azienda
 <div class="banner banner-white bg-white">
   <div class="row align-items-center">
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-      <h2 class="h2-responsive">Fresh wall</h2>
+      <h2 class="h2-responsive">Assaporami Fresh-wall</h2>
       <p>Soluzione versatile, richiede pochissimo spazio. Aperta per l'ora di pranzo. Una soluzione in libero accesso che offre piatti freschi e gustosi in una vetrina refrigerata per un ottima conservazione.
       </p>
     </div>
@@ -43,11 +43,11 @@ title: Assaporami - Servizi per mangiare meglio in azienda
 <div class="banner banner-grey">
   <div class="row align-items-center">
     <div class="col-12 col-md-4 kill-padding">
-      <%= image_tag "https://res.cloudinary.com/pimpi1/image/upload/v1561108911/sito/Servizi/4.scouting_wfy4fv.jpg", id: "img-services" %>
+      <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573831189/Assaporami/Servizi/exclusive_bowl.jpg", id: "img-services" %>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
       <h2 class="h2-responsive">Exclusive lunch bag</h2>
-      <p>Ricette esclusive per le vostre riunioni piu importanti. 3 gamme di prodotti disponibili: carne, pesce, vegetariano. Passate l'ordine entro due settimane dal vostro special lunch !</p>
+      <p>Ricette esclusive per le vostre riunioni piu importanti. 3 gamme di prodotti disponibili: carne, pesce, vegetariano. Passate l'ordine entro due settimane dal vostro special lunch e stupite i vostri ospiti.</p>
     </div>
   </div>
 </div>
@@ -56,11 +56,11 @@ title: Assaporami - Servizi per mangiare meglio in azienda
   <div class="row align-items-center">
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
       <h2 class="h2-responsive">Power staff meeting</h2>
-      <p>L'abbonamento per le vostre riunioni settimanali: La bonta in riunione. Una soluzione unica pensata per i vostri collaboratori.
+      <p>L'abbonamento per le vostre riunioni settimanali: La bonta in riunione. Una soluzione unica pensata per i giorni di riunioni dei vostri collaboratori.
       </p>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-        <%= image_tag "https://res.cloudinary.com/pimpi1/image/upload/v1561108938/sito/Servizi/5.consulenzadimmagine_ou1kbf.jpg", id: "img-services" %>
+        <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573830336/Assaporami/Servizi/lunch_meeting.jpg", id: "img-services" %>
     </div>
   </div>
 </div>
@@ -68,7 +68,7 @@ title: Assaporami - Servizi per mangiare meglio in azienda
 <div class="banner banner-grey">
   <div class="row align-items-center">
     <div class="col-12 col-md-4 kill-padding">
-      <%= image_tag "https://res.cloudinary.com/pimpi1/image/upload/v1561367311/sito/Carousel/6.showroom_wfyeh5.jpg", id: "img-services" %>
+      <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573825558/Assaporami/Servizi/team-building.jpg", id: "img-services" %>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
       <h2 class="h2-responsive">Assaporami Event</h2>
@@ -86,7 +86,7 @@ title: Assaporami - Servizi per mangiare meglio in azienda
       </p>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-        <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573666049/Assaporami/Index/catering.jpg", id: "img-services" %>
+        <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573826175/Assaporami/Servizi/catering.jpg", id: "img-services" %>
     </div>
   </div>
 </div>
