--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -75,14 +75,15 @@
     color: white;
     font-size: 40px;
     opacity: 0.9;
-    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+    text-shadow: 1px 1px 1px rgba(122, 232, 49, 0.7);
+
   }
 
   p {
     color: white;
     font-size: 20px;
-    opacity: 0.7;
-    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+    opacity: 0.8;
+    text-shadow: 1px 1px 3px rgba(122, 232, 49,0.4);
   }
 }
 
