--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -75,11 +75,11 @@ title: Assaporami Business - About
                 <hr align="center" width="10%">
                 <div>
                   <p>
-                    Presente sul mercato dal 2016, Assaporami offre una molteplicità di servizi di ristorazione alle aziende perchè possano offrire ai loro collaboratori una pausa pranzo sana ed equilibrata. Food delivery a prezzi dolci o soluzion on-site, le soluzioni proposte sono flessibili e richiedono poco spazio.
+                    Presente sul mercato dal 2016, Assaporami offre una molteplicità di servizi di ristorazione alle aziende perchè possano offrire ai loro collaboratori una pausa pranzo sana ed equilibrata. Food delivery a prezzi dolci o soluzioni on-site, le soluzioni proposte sono flessibili e richiedono poco spazio.
                   </p>
 
                   <p>
-                    Avvalendosi di esperti culinari e di nutrizione, Assaporami crea ogni giono dei piatti freschi, buoni e sani per i dipendenti.
+                    Avvalendosi di esperti culinari e di nutrizione, Assaporami crea ogni giono dei piatti freschi, buoni e sani per i dipendenti esigenti.
                   </p>
                 </div>
             </div>
