--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,6 +15,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <li data-target="#carousel-example-2" data-slide-to="4"></li>
         <li data-target="#carousel-example-2" data-slide-to="5"></li>
         <li data-target="#carousel-example-2" data-slide-to="6"></li>
+        <li data-target="#carousel-example-2" data-slide-to="7"></li>
       </ol>
       <!--/.Indicators-->
       <!--Slides-->
@@ -22,19 +23,32 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="carousel-item active">
           <div class="view">
             <img class="d-block w-100" src="https://res.cloudinary.com/orexibus/image/upload/c_fill,h_452,w_1024/v1573843122/Assaporami/Index/foodiesfeed.com_green-salad-with-bread.jpg"
-              alt="Olimpia Rospigliosi Agency Press Office & Pr">
+              alt="Assaporami on-demand">
             <div class="mask rgba-black-light"></div>
           </div>
           <div class="carousel-caption">
-            <h3>Assaporami on-demand</h3>
-            <p>La consegna del pranzo in azienda con prezzi convenzionati. L'azienda può participare alla spesa.</p>
+            <h3>Assaporami: Pranzo di lavoro fresco, buono, sano</h3>
+            <p>Il tuo pranzo pronto, preparato ogni giono con amore.</p>
           </div>
         </div>
         <div class="carousel-item">
           <!--Mask color-->
           <div class="view">
-            <img class="d-block w-100" src="https://res.cloudinary.com/pimpi1/image/upload/c_lfill,h_452,w_1024/v1561051216/sito/Carousel/2.organizzazioneeventi_gy18ps.jpg"
-              alt="Olimpia Rospigliosi Agency Organizzazione Eventi">
+            <img class="d-block w-100" src="https://res.cloudinary.com/orexibus/image/upload/c_fill,h_452,w_1024/v1573851108/Assaporami/Servizi/group-of-people-making-toast.jpg"
+              alt="Assaporami on-demand">
+            <div class="mask rgba-black-strong"></div>
+          </div>
+          <div class="carousel-caption">
+              <h3>Assaporami on-demand</h3>
+              <p>La consegna del pranzo in azienda con prezzi convenzionati. L'azienda può participare alla spesa.
+              </p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <!--Mask color-->
+          <div class="view">
+            <img class="d-block w-100" src="https://res.cloudinary.com/orexibus/image/upload/c_fill,h_452,w_1024/v1573853431/Assaporami/Servizi/corner.jpg"
+              alt="Assaporami Corner">
             <div class="mask rgba-black-strong"></div>
           </div>
           <div class="carousel-caption">
@@ -46,25 +60,13 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <div class="carousel-item">
           <!--Mask color-->
           <div class="view">
-            <img class="d-block w-100" src="https://res.cloudinary.com/pimpi1/image/upload/c_lfill,h_452,w_1024/v1561106811/sito/Carousel/3.supportocommerciale_h0vb3z.jpg"
-              alt="Olimpia Rospigliosi Agency Supporto Commerciale">
+            <img class="d-block w-100" src="https://res.cloudinary.com/orexibus/image/upload/c_fill,h_452,w_1024/v1573852912/Assaporami/Servizi/fridge.jpg"
+              alt="Assaporami fresh wall">
             <div class="mask rgba-black-slight"></div>
           </div>
           <div class="carousel-caption">
             <h3>Assaporami fresh wall</h3>
             <p>Soluzione versatile, richiede pochissimo spazio. Aperta per l'ora di pranzo.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <!--Mask color-->
-          <div class="view">
-            <img class="d-block w-100" src="https://res.cloudinary.com/orexibus/image/upload/c_fill,h_452,w_1024/v1573831189/Assaporami/Servizi/exclusive_bowl.jpg"
-              alt="Assaporami Exclusive lunch bag, exclusive bowl">
-            <div class="mask rgba-black-slight"></div>
-          </div>
-          <div class="carousel-caption">
-            <h3>Exclusive lunch bag</h3>
-            <p>Ricette esclusive per le vostre riunioni piu importanti.</p>
           </div>
         </div>
         <div class="carousel-item">
@@ -77,6 +79,18 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
           <div class="carousel-caption">
             <h3>Power staff meeting</h3>
             <p>L'abbonamento per le vostre riunioni settimanali: La bonta in riunione.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <!--Mask color-->
+          <div class="view">
+            <img class="d-block w-100" src="https://res.cloudinary.com/orexibus/image/upload/c_fill,h_452,w_1024/v1573831189/Assaporami/Servizi/exclusive_bowl.jpg"
+              alt="Assaporami Exclusive lunch bag, exclusive bowl">
+            <div class="mask rgba-black-slight"></div>
+          </div>
+          <div class="carousel-caption">
+            <h3>Exclusive lunch bag</h3>
+            <p>Ricette esclusive per le vostre riunioni piu importanti.</p>
           </div>
         </div>
         <div class="carousel-item">
