--- a/source/services.html.erb
+++ b/source/services.html.erb
@@ -10,7 +10,7 @@ title: Assaporami - Servizi per mangiare meglio in azienda
       </p>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-        <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573842501/Assaporami/Index/ondemand.jpg", id: "img-services" %>
+        <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573851108/Assaporami/Servizi/group-of-people-making-toast.jpg", id: "img-services" %>
     </div>
   </div>
 </div>
@@ -18,7 +18,7 @@ title: Assaporami - Servizi per mangiare meglio in azienda
 <div class="banner banner-grey">
   <div class="row align-items-center">
     <div class="col-12 col-md-4 kill-padding">
-      <%= image_tag "https://res.cloudinary.com/pimpi1/image/upload/v1561108856/sito/Servizi/2.organizzazioneeventi_qqfcfk.jpg", id: "img-services" %>
+      <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573853431/Assaporami/Servizi/corner.jpg", id: "img-services" %>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
       <h2 class="h2-responsive">Assaporami Corner</h2>
@@ -35,7 +35,7 @@ title: Assaporami - Servizi per mangiare meglio in azienda
       </p>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-        <%= image_tag "https://res.cloudinary.com/pimpi1/image/upload/v1561108884/sito/Servizi/3.supportocommerciale_fgvjxo.jpg", id: "img-services" %>
+        <%= image_tag "https://res-console.cloudinary.com/orexibus/thumbnails/transform/v1/image/upload//v1573852912/QXNzYXBvcmFtaS9TZXJ2aXppL2ZyaWRnZQ==/drilldown", id: "img-services" %>
     </div>
   </div>
 </div>
@@ -43,11 +43,11 @@ title: Assaporami - Servizi per mangiare meglio in azienda
 <div class="banner banner-grey">
   <div class="row align-items-center">
     <div class="col-12 col-md-4 kill-padding">
-      <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573831189/Assaporami/Servizi/exclusive_bowl.jpg", id: "img-services" %>
+      <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573830336/Assaporami/Servizi/lunch_meeting.jpg", id: "img-services" %>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-      <h2 class="h2-responsive">Exclusive lunch bag</h2>
-      <p>Ricette esclusive per le vostre riunioni piu importanti. 3 gamme di prodotti disponibili: carne, pesce, vegetariano. Passate l'ordine entro due settimane dal vostro special lunch e stupite i vostri ospiti.</p>
+      <h2 class="h2-responsive">Power staff meeting</h2>
+      <p>L'abbonamento per le vostre riunioni settimanali: La bonta in riunione. Una soluzione unica pensata per i giorni di riunioni dei vostri collaboratori.</p>
     </div>
   </div>
 </div>
@@ -55,12 +55,12 @@ title: Assaporami - Servizi per mangiare meglio in azienda
 <div class="banner banner-white bg-white">
   <div class="row align-items-center">
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-      <h2 class="h2-responsive">Power staff meeting</h2>
-      <p>L'abbonamento per le vostre riunioni settimanali: La bonta in riunione. Una soluzione unica pensata per i giorni di riunioni dei vostri collaboratori.
+      <h2 class="h2-responsive">Exclusive lunch bag</h2>
+      <p>Ricette esclusive per le vostre riunioni piu importanti. 3 gamme di prodotti disponibili: carne, pesce, vegetariano. Passate l'ordine entro due settimane dal vostro special lunch e stupite i vostri ospiti.
       </p>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-        <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573830336/Assaporami/Servizi/lunch_meeting.jpg", id: "img-services" %>
+        <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573831189/Assaporami/Servizi/exclusive_bowl.jpg", id: "img-services" %>
     </div>
   </div>
 </div>
