--- a/source/stylesheets/pages/_about.scss
+++ b/source/stylesheets/pages/_about.scss
@@ -33,7 +33,7 @@
 }
 
 .banner-img {
-  background-image: url('https://res.cloudinary.com/pimpi1/image/upload/c_lfill,h_505,w_1143/v1561316737/sito/About/1.ABOUT_iwpzk2.jpg');
+  background-image: url('https://res.cloudinary.com/orexibus/image/upload/c_fill,h_505,w_1143/v1573854732/Assaporami/about/growingcompany.jpg');
   background-size: cover;
   background-position: center;
   background-repeat:no-repeat;
