--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -25,7 +25,7 @@ title: Assaporami Business - About
       <div class="container">
         <div class="row d-flex">
           <div class="col-xs-12 col-md-12 col-lg-6 kill-padding-lr">
-           <%= image_tag "https://res.cloudinary.com/pimpi1/image/upload/v1560786503/sito/About/2.portrait_va0vft.jpg", class:"w-100" %>
+           <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/c_scale,h_555,w_555/v1573855946/Assaporami/about/Dartagnan-musketeers.jpg", class:"w-100" %>
           </div>
           <div class="col-xs-12 col-md-12 col-lg-6 kill-padding-lr">
             <div class="box-content">
@@ -40,17 +40,20 @@ title: Assaporami Business - About
                 <hr align="center" width="10%">
                 <div>
                   <p>
-                  Marco Almerigogna, Incididunt proident exercitation dolor reprehenderit duis non proident commodo aliquip aliquip duis dolore tempor ut est.
+                  Athos, Incididunt proident exercitation dolor reprehenderit duis non proident commodo aliquip aliquip duis dolore tempor ut est.
                   </p>
                   <p>
-                  Giaccomo Treccani, Aliquip sed minim incididunt irure ad amet proident consectetur exercitation.
+                  Porthos sed minim incididunt irure ad amet proident consectetur exercitation.
                   </p>
                   <p>
-                  Regis Weill, Do sint ut velit dolore et exercitation est ea veniam fugiat deserunt anim dolore ad.
+                  Aramis, Do sint ut velit dolore et exercitation est ea veniam fugiat deserunt anim dolore ad.
+                  </p>
+                  <p>
+                  D'Artagnan, Do sint ut velit dolore et exercitation est ea veniam fugiat deserunt anim dolore ad.
                   </p>
 
                   <p>
-                  Giaccomo, Marco e Regis Voluptate sint dolor in nulla dolore est officia sit reprehenderit proident cupidatat in. Elit nulla proident elit sed in do elit sunt aliquip. Fugiat eu excepteur adipisicing voluptate tempor commodo elit incididunt aute quis do irure adipisicing veniam eu reprehenderit ullamco consectetur enim.
+                   Athos, Porthos, Aramis & d'Artagna Voluptate sint dolor in nulla dolore est officia sit reprehenderit proident cupidatat in. Elit nulla proident elit sed in do elit sunt aliquip. Fugiat eu excepteur adipisicing voluptate tempor commodo elit incididunt aute quis do irure adipisicing veniam eu reprehenderit ullamco consectetur enim.
                   </p>
                 </div>
               </div>
