--- a/source/stylesheets/pages/_contact.scss
+++ b/source/stylesheets/pages/_contact.scss
@@ -1,5 +1,5 @@
 .banner-map {
-  background-image: url('https://res.cloudinary.com/orexibus/image/upload/w_1000,ar_16:9,c_fill,g_auto,e_sharpen/v1559851712/Rospigliosi%20events/map2.png');
+  background-image: url('https://res.cloudinary.com/orexibus/image/upload/w_1000,ar_16:9,c_fill,g_auto,e_sharpen/v1573859153/Assaporami/mappa.png');
   background-size: cover;
   background-position: center;
   background-repeat:no-repeat;
