--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -19,7 +19,7 @@
     <meta property="og:site_name" content="Assaporami"/>
     <meta property="og:title" content="Assaporami - Servizi di ristorazioni aziendali innovativi." />
     <meta property="og:description" content="Assaporami fornisce servizi di ristorazione su misura per le aziende: Food delivery personalizzato, corner on-site (con o senza personale) & exclusive meeting lunch. Solo cibo fresco, buono e sano."/>
-    <meta property="og:image" itemprop="image" content="https://res.cloudinary.com/pimpi1/image/upload/v1561313188/sito/Meta/meta_profile_femvpe.jpg" />
+    <meta property="og:image" itemprop="image" content="https://res.cloudinary.com/orexibus/image/upload/c_fit,h_256,w_256/v1573727841/Assaporami/Index/assaporami_logo.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.assaporami.it/"/>
 
