--- a/source/services.html.erb
+++ b/source/services.html.erb
@@ -35,7 +35,7 @@ title: Assaporami - Servizi per mangiare meglio in azienda
       </p>
     </div>
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-        <%= image_tag "https://res-console.cloudinary.com/orexibus/thumbnails/transform/v1/image/upload//v1573852912/QXNzYXBvcmFtaS9TZXJ2aXppL2ZyaWRnZQ==/drilldown", id: "img-services" %>
+        <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573852912/Assaporami/Servizi/fridge.jpg", id: "img-services" %>
     </div>
   </div>
 </div>
