--- a/source/services.html.erb
+++ b/source/services.html.erb
@@ -30,7 +30,7 @@ title: Assaporami - Servizi per mangiare meglio in azienda
 <div class="banner banner-white bg-white">
   <div class="row align-items-center">
     <div class="col-12 col-md-4 offset-md-2 kill-padding">
-      <h2 class="h2-responsive">Assaporami Fresh-wall</h2>
+      <h2 class="h2-responsive">Assaporami Fresh wall</h2>
       <p>Soluzione versatile, richiede pochissimo spazio. Aperta per l'ora di pranzo. Una soluzione in libero accesso che offre piatti freschi e gustosi in una vetrina refrigerata per un ottima conservazione.
       </p>
     </div>
