favicon + photo cleaning

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,7 +9,7 @@
     <title><%= current_page.data.title %></title>
     <%= stylesheet_link_tag "application" %>
     <%= javascript_include_tag "application" %>
-    <%= favicon_tag "https://res.cloudinary.com/orexibus/image/upload/v1573727841/Assaporami/Index/assaporami_logo.png" %>
+    <%= favicon_tag "images/assaporami_favicon.ico" %>
     <!-- Google result text-->
     <title>Assaporami | Servizi di ristorazioni aziendali innovativi</title>
     <!-- Google result description-->
