--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -89,7 +89,7 @@ title: Assaporami Business - About
               </div>
           </div>
           <div class="col-xs-12 col-md-12 col-lg-6 kill-padding-lr ">
-            <%= image_tag "https://res.cloudinary.com/pimpi1/image/upload/v1561108435/sito/About/3.orpragenzia_xvsjwq.jpg", class:"w-100" %>
+            <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/v1573917157/Assaporami/about/chiara_holding_bowl.jpg", class:"w-100" %>
           </div>
         </div>
 
