fix center reason card

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -174,7 +174,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
       <p><strong>Con Assaporami, potete offrire un servizio di ristorazione on-site ai vostri collaboratori. Qualsiasi sia la dimensione della vostra azienda abbiamo la soluzione piu adatta. Da 25 collaboratori a vari centinaia di dipendenti, vi possiamo aiutare ad offrire la migliore pausa pranzo ai vostri dipendenti.</strong></p>
     </div>
     <!--Cards-reason row-->
-    <div class="row cards-reason d-flex">
+    <div class="row cards-reason d-flex justify-content-center">
 
       <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
         <div class="card-reason-inner">
@@ -270,7 +270,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
 
     <h3>Come aiutiamo i dipendenti</h3>
     <!--Business-cards-reason row-->
-    <div class="row cards-reason d-flex">
+    <div class="row cards-reason d-flex justify-content-center">
 
       <div class="class=col-12 col-md-6 col-lg-4 flip-card-reason">
         <div class="card-reason-inner">
