profilo con avatar

--- a/source/stylesheets/pages/_about.scss
+++ b/source/stylesheets/pages/_about.scss
@@ -131,3 +131,9 @@
 .profile {
   height: 972px;
 }
+
+.team-avatars {
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
