--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -24,8 +24,11 @@ title: Assaporami Business - About
     <div class="banner banner-about-profile">
       <div class="container">
         <div class="row d-flex">
-          <div class="col-xs-12 col-md-12 col-lg-6 kill-padding-lr">
-           <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/c_scale,h_555,w_555/v1573855946/Assaporami/about/Dartagnan-musketeers.jpg", class:"w-100" %>
+          <div class="col-xs-12 col-md-12 col-lg-6 kill-padding-lr d-flex team-avatars">
+           <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/c_fill,h_125,w_125/v1573936403/Assaporami/about/regis_weill_picture.jpg", class:"avatar-large" %>
+           <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/c_fill,h_125,w_125/v1573936649/Assaporami/about/marco.jpg", class:"avatar-large" %>
+           <%= image_tag "https://res.cloudinary.com/orexibus/image/upload/c_fill,h_125,w_125/v1573936930/Assaporami/about/giaccomo.jpg", class:"avatar-large" %>
+
           </div>
           <div class="col-xs-12 col-md-12 col-lg-6 kill-padding-lr">
             <div class="box-content">
@@ -40,20 +43,16 @@ title: Assaporami Business - About
                 <hr align="center" width="10%">
                 <div>
                   <p>
-                  Athos, Incididunt proident exercitation dolor reprehenderit duis non proident commodo aliquip aliquip duis dolore tempor ut est.
+                  Regis Weill, Co-founder & CEO, Laurea Université Lyon2, Master Université IAE-Lyon3, Full stack developper - Le Wagon.
                   </p>
                   <p>
-                  Porthos sed minim incididunt irure ad amet proident consectetur exercitation.
+                  Marco Almerigogna, Co-founder & COO, Laurea Università Bocconi, MBA Insead.
                   </p>
                   <p>
-                  Aramis, Do sint ut velit dolore et exercitation est ea veniam fugiat deserunt anim dolore ad.
+                  Giaccomo Treccani, Co-founder & Chef Director, ALMA & AIBES.
                   </p>
                   <p>
-                  D'Artagnan, Do sint ut velit dolore et exercitation est ea veniam fugiat deserunt anim dolore ad.
-                  </p>
-
-                  <p>
-                   Athos, Porthos, Aramis & d'Artagna Voluptate sint dolor in nulla dolore est officia sit reprehenderit proident cupidatat in. Elit nulla proident elit sed in do elit sunt aliquip. Fugiat eu excepteur adipisicing voluptate tempor commodo elit incididunt aute quis do irure adipisicing veniam eu reprehenderit ullamco consectetur enim.
+                  E tanti altri super bravi che non svegliamo !
                   </p>
                 </div>
               </div>
