--- a/source/stylesheets/components/_avatar.scss
+++ b/source/stylesheets/components/_avatar.scss
@@ -3,7 +3,7 @@
   border-radius: 50%;
 }
 .avatar-large {
-  width: 56px;
+  width: 125px;
   border-radius: 50%;
 }
 .avatar-bordered {
@@ -18,3 +18,8 @@
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
 }
+
+
+// https://res.cloudinary.com/orexibus/image/upload/v1573936649/Assaporami/about/marco.jpg
+// https://res.cloudinary.com/orexibus/image/upload/v1573936930/Assaporami/about/giaccomo.jpg
+//https://res.cloudinary.com/orexibus/image/upload/v1573936403/Assaporami/about/regis_weill_picture.jpg
