--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -147,7 +147,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
         <h6><em>La migliore pausa pranzo per i vostri collaboratori</em></h6>
       </div>
 
-      <hr align="center" width="10%">
+      <hr align="center" width="10%" class="colored-border">
 
       <div class="content-presentation-text-title">
         <p><strong>Ogni giorno, i nostri Chef preparano dei piatti saporiti, sani, ed equilibrati, consegnati nei vostri uffici affinchè i vostri collaboratori si deliziano. Con Assaporami non ci sono più scuse per godersi la pausa pranzo.</strong></p>
