--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -32,6 +32,12 @@
     <meta name="twitter:creator" content="@assaporami">
     <meta name="twitter:image:src" content="http://twitter-card.jpg">
 
+    <!--Internal Style sheet-->
+    <style>
+      hr {
+        border-top: 1px solid rgba(122,232,49,0.9);
+      }
+    </style>
 
   </head>
 
