--- a/source/stylesheets/config/_bootstrap_variables.scss
+++ b/source/stylesheets/config/_bootstrap_variables.scss
@@ -23,3 +23,12 @@ $border-radius-lg: 2px;
 $border-radius-sm: 2px;
 
 // Override other variables below!
+
+// Read below: change made in layout !
+
+// <!--Internal Style sheet-->
+// <style>
+//   hr {
+//     border-top: 1px solid rgba(122,232,49,0.9);
+//   }
+// </style>
