better content about

--- a/source/about.html.erb
+++ b/source/about.html.erb
@@ -43,13 +43,13 @@ title: Assaporami Business - About
                 <hr align="center" width="10%">
                 <div>
                   <p>
-                  Regis Weill, Co-founder & CEO, Laurea Université Lyon2, Master Université IAE-Lyon3, Full stack developper - Le Wagon.
+                  Regis Weill, Co-founder & CEO, Laurea Université Lyon2, Master Université IAE-Lyon3, Full-stack coding @ Le Wagon. Regis ha creato varie società nel settore delle tecnologie e dei media.
                   </p>
                   <p>
-                  Marco Almerigogna, Co-founder & COO, Laurea Università Bocconi, MBA Insead.
+                  Marco Almerigogna, Co-founder & COO, Laurea Università Bocconi, MBA Insead. Marco è stato membro del board di numerose società prima di creare RT, società di consulenza nel food & beverage.
                   </p>
                   <p>
-                  Giaccomo Treccani, Co-founder & Chef Director, ALMA & AIBES.
+                  Giaccomo Treccani, Co-founder & Chef Director, ALMA & AIBES. Giaccomo ha ideato e creato vari formatti di successo nel settore delle ristorazione italiana, portando prodotti di qualità alla portata dei piu numerosi.
                   </p>
                   <p>
                   E tanti altri super bravi che non svegliamo !
