--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -18,7 +18,7 @@
     <!-- Facebook -->
     <meta property="og:site_name" content="Assaporami"/>
     <meta property="og:title" content="Assaporami - Servizi di ristorazioni aziendali innovativi." />
-    <meta property="og:description" content="Consegna di piatti freschi, buoni e sani. Assaporami fornisce servizi di ristorazione su misura per le aziende: Food delivery personalizzato, corner on-site (con o senza personale) & exclusive meeting lunch. Solo cibo fresco, buono e sano."/>
+    <meta property="og:description" content="Consegna di piatti freschi, buoni e sani in ufficio. Assaporami fornisce servizi di ristorazione su misura per le aziende: Food delivery personalizzato, corner on-site (con o senza personale) & exclusive meeting lunch. Solo cibo fresco, buono e sano."/>
     <meta property="og:image" itemprop="image" content="assaporami_logo_meta.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.assaporami.it/"/>
