--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -21,7 +21,7 @@ title: Assaporami Business - Contatti
         </div>
 
         <div class="col-12 col-md-8 form">
-          <form class="form" id="contactform" action="//formspree.io/info@olimpiarospigliosi.it" method="POST">
+          <form class="form" id="contactform" action="https://formspree.io/mleeobdl" method="POST">
             <h5 class="mb-14">SCRIVETECI</h5>
             <div class="form-row">
               <div class="col-6 form-group">
