--- a/source/simpleform.html.erb
+++ b/source/simpleform.html.erb
@@ -3,7 +3,7 @@
       <div class="row justify-content-center">
         <div class="col-12 col-sm-8">
           <h5 class="text-center mb-4">INSERISCI I TUOI DATI PER METTERTI IN CONTATTO E RICEVERE L'OFFERTA PIU ADATTA ALLA TUA AZIENDA</h5>
-          <form action="https://formspree.io/xbjrqzpr" method="POST" class="form">
+          <form action="https://formspree.io/mleeobdl" method="POST" class="form">
 
               <div class="col-md-4 form-group">
                 <input type="email" name="_replyto" placeholder="esempio@domain.com" id="_replyto" required>
