--- a/source/_horizontal_simple_form.erb
+++ b/source/_horizontal_simple_form.erb
@@ -3,7 +3,7 @@
     <div class="col-12 col-md-8 form">
       <div class="card-horizontal-simple-form">
 
-        <form class="form" id="contactform" action="https://formspree.io/xbjrqzpr" method="POST">
+        <form class="form" id="contactform" action="https://formspree.io/mleeobdl" method="POST">
           <p class="mb-14">INSERISCI I TUOI DATI PER METTERTI IN CONTATTO E RICEVERE L'OFFERTA PIU ADATTA ALLA TUA AZIENDA</p>
           <div class="form-row d-flex">
             <div class="col-lg-4 col-sm-12 form-group">
