--- a/source/contact_employees.html.erb
+++ b/source/contact_employees.html.erb
@@ -26,7 +26,7 @@ title: Assaporami - Contatti per dipendenti
 
         <!-- form -->
         <div class="col-12 col-md-8 form">
-          <form class="form" id="contactform" action="//formspree.io/info@olimpiarospigliosi.it" method="POST">
+          <form class="form" id="contactform" action="https://formspree.io/mleeobdl" method="POST">
             <h5 class="mb-3">SCRIVETECI</h5>
             <div class="form-row">
               <div class="col-6 form-group">
