--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -28,7 +28,7 @@ title: Assaporami | Servizi di ristorazione aziendali innovativi
           </div>
           <div class="carousel-caption">
             <h3>Assaporami: Pranzo di lavoro fresco, buono, sano</h3>
-            <p>Il tuo pranzo pronto, preparato ogni giono con amore.</p>
+            <p>Il tuo pranzo, preparato ogni giono con amore.</p>
           </div>
         </div>
         <div class="carousel-item">
